# subfrost-app

./: .MARKETING_DESIGN_GUIDE.md.swp  .btc-alias  .dockerignore  .env.example  .env.regtest.example  .eslintrc.js  .eslintrc.json  .gcloudignore  .gitignore  .npmrc  .replrc.js  ALKANES_BEFORE_AFTER_COMPARISON.md  ALKANES_SDK_EXPORT_ISSUE_DETAILED.md  ALKANE_MINTING_SUMMARY.md  ARCHITECTURE_COMPLIANCE.md  ASSIGNMENT_CHECKLIST.md  AUTO_CHAINING_COMPLETE.md  BALANCE_INVESTIGATION.md  BALANCE_UPDATE_ANALYSIS.md  BUG_REPORT.md  CHADSON_JOURNAL.md  CLAUDE.md  CRITICAL_FIXES.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_SUCCESS.md  Dockerfile  FINAL_INSTRUCTIONS.md  FINAL_SUMMARY.md  FINDINGS.md  FIXES_APPLIED.md  FIX_MINT_BUTTON.md  FIX_PORT_CONFLICT.md  FUTURES_COMPLETE.md  FUTURES_COMPLETE_GUIDE.md  GAPS_CLOSED.md  GUIDE.md  HOW_TO_SHARE_ERRORS.md  IMPLEMENTATION_STATUS.md  INTEGRATION_COMPLETE.md  INTEGRATION_STATUS.md  (+67 more)
.claude/: settings.json
.github/: SETUP.md
__tests__/: README.md  percentage-buttons.test.ts  regtest-config.test.ts  regtest-e2e-config.test.ts  regtest-ui.test.tsx  setup.ts
app/: global-error.tsx  global.d.ts  globals.css  layout.tsx  page.tsx  (+1 more)
scripts/rust-deployer/: Cargo.toml  Dockerfile  deployment_log.txt  wallet-20251122213822.json  wallet-20251122214313.json  wallet-20251122214336.json  wallet-20251122214404.json  wallet-20251122214508.json  wallet-20251122214704.json  wallet-20251122214747.json  wallet-20251122214754.json  wallet-20251122215035.json  wallet-20251122215043.json  wallet-20251122215308.json
scripts/rust-deployer/src/: main.rs
(+1513 files in other folders)
